[gd_scene load_steps=12 format=2]

[ext_resource path="res://Images/Sprites/lock.png" type="Texture" id=1]
[ext_resource path="res://font/SparkyStonesRegular-BW6ld.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Images/Sprites/furniture/Affiche.png" type="Texture" id=3]
[ext_resource path="res://affiche.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=12]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.321569, 0.2, 0.0156863, 1 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="DynamicFont" id=13]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[node name="affiche" type="Node2D"]
script = ExtResource( 6 )

[node name="Contour_affiche" type="Sprite" parent="."]
visible = false
position = Vector2( 172, 244 )
scale = Vector2( 1, 1.05076 )
texture = ExtResource( 3 )

[node name="Affiche" type="Sprite" parent="."]
position = Vector2( 81, -24 )
texture = ExtResource( 3 )
offset = Vector2( 90.6006, 259.447 )

[node name="Q1" type="Button" parent="Affiche"]
margin_left = -2.0
margin_top = 104.0
margin_right = 188.0
margin_bottom = 161.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Symptome ?"

[node name="Q2" type="Button" parent="Affiche"]
margin_left = -10.0
margin_top = 172.0
margin_right = 189.0
margin_bottom = 230.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 9 )
text = "Antecedents ?"
icon_align = 1

[node name="Q3" type="Button" parent="Affiche"]
margin_left = -23.0
margin_top = 238.0
margin_right = 207.0
margin_bottom = 289.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 10 )
text = "Contexte de vie ?"

[node name="Q4" type="Button" parent="Affiche"]
margin_left = -9.0
margin_top = 302.0
margin_right = 196.0
margin_bottom = 398.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.054902, 0, 1, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.054902, 0, 1, 1 )
custom_colors/font_color_pressed = Color( 0.054902, 0, 1, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 11 )
icon_align = 1
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Affiche/Q4"]
margin_top = -2.0
margin_right = 208.0
margin_bottom = 91.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "Proceder a l'inspection du patient"
align = 1
autowrap = true

[node name="lock" type="Sprite" parent="Affiche/Q4"]
position = Vector2( 101, 44 )
scale = Vector2( 0.148926, 0.148926 )
texture = ExtResource( 1 )

[connection signal="pressed" from="Affiche/Q1" to="." method="_on_Q1_pressed"]
[connection signal="pressed" from="Affiche/Q2" to="." method="_on_Q2_pressed"]
[connection signal="pressed" from="Affiche/Q3" to="." method="_on_Q3_pressed"]
[connection signal="pressed" from="Affiche/Q4" to="." method="_on_Q4_pressed"]
